--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,6 @@ dependencies:
   otp_autofill: ^3.0.2
   image_picker: ^1.0.7
   device_info: ^2.0.3
-  circle_nav_bar: ^2.0.1+1
-  curved_navigation_bar: ^1.0.3
   flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
@@ -57,14 +55,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/icon/home.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
 # The following section is specific to Flutter packages.
 flutter:
 
