--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+
+  biometric_auth:
+    git:
+      url: https://github.com/directpaylk/flutter-biometric-auth.git
+      ref: null-safety
+
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
@@ -44,6 +51,8 @@ dependencies:
   image_picker: ^1.0.7
   device_info: ^2.0.3
   flutter_launcher_icons: ^0.13.1
+  dropdown_search: ^5.0.6
+  
 
 dev_dependencies:
   flutter_test:
